--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Latitude vs. Max Temperature</title>
+  <title>Latitude vs. Cloudiness</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -13,7 +13,7 @@
 	  
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="Landing.html">Latitude</a>
+		<a class="navbar-brand" href="index.html">Latitude</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -44,9 +44,9 @@
                   <div class="row">
                    <div class="col-md-1"></div>  
                      <div class="col-md-6">
-                    <h1>Max Temperature</h1>
-                      <img src="temp.png" width="400" height="350">
-                      <p>There is a negative correlation between latitude and temperature. Cities that are closer to the equator tend to be warmer than cities that are further from the equator.</p>
+                    <h1>Cloudiness</h1>
+                      <img src="cloud.png" width="400" height="350">
+                      <p>There was no correlation found between cloudiness and city latitude.</p>
                    </div>    
                      <div class="col-md-4 sidebar">
                       <div class="row">
@@ -75,9 +75,7 @@
                  
                      <div class="col-md-3">     
                        <a href="Wind Speed.html">Wind_Speed<img src="wind.png" width="150px" height="150px"></a>
-                     </div>
-                        <div class="col-md-3"></div>
-                      </div>    
+                     </div>   
                    </div>         
                   <div class="col-md-1"></div>
                 </div>      
